--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,7 +15,14 @@
         tools:text="8.9" />
 
     <TextView
-        android:id="@+id/place_text_view"
+        android:id="@+id/place_offset_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="30km S of" />
+
+    <TextView
+        android:id="@+id/primary_place_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
